--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
     </form>
     <div id="tasks">
         <div id="task-row-1" class="row">
-            <div id="task-description-1">pack spikes for track meet</div>
-            <div id="task-status-1" class="todo task-status">todo</div>
+            <div id="task-description-1" class="left-side">pack spikes for track meet</div>
+            <div id="task-status-1" class="todo right-side">todo</div>
         </div>
         <div id="task-row-2" class="row">
-            <div id="task-description-2">write draft english paper</div>
-            <div id="task-status-2" class="doing task-status">doing</div>
+            <div id="task-description-2" class="left-side">write draft english paper</div>
+            <div id="task-status-2" class="doing right-side>doing</div>
         </div>
         <div id="task-row-3" class="row">
-            <div id="task-description-3">finish math homework</div>
-            <div id="task-status-3" class="done task-status">done</div>
+            <div id="task-description-3" class="left-side">finish math homework</div>
+            <div id="task-status-3" class="done right-side">done</div>
         </div>
     </div>
 </body>
