remove some lines, add some lines

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div id="task-row-2" class="row">
             <div id="task-description-2" class="left-side">write draft english paper</div>
-            <div id="task-status-2" class="doing right-side>doing</div>
+            <div id="task-status-2" class="doing right-side">doing</div>
         </div>
         <div id="task-row-3" class="row">
             <div id="task-description-3" class="left-side">finish math homework</div>
